# pisku-

pisku-cli/: Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  run_server.py
pisku-cli/cli/: __init__.py  context_builder.py  license_manager.py  main.py  skills_manager.py  stats_tracker.py  token_calculator.py
pisku-cli/config/: config.json  stats.json
pisku-cli/docs/contexts/: mi-proyecto_20260306_144411.md
pisku-cli/landing/: index.html  success.html
pisku-cli/pisku-cli/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
pisku-cli/pisku-cli/cli/: agent_builder.py  agents_manager.py  clipboard_manager.py  context_builder.py  license_manager.py  main.py  recommender.py  session_predictor.py  skill_auditor.py  skill_scanner.py  skills_manager.py  skills_puller.py  stats_tracker.py  tool_writer.py  wizard.py
pisku-cli/pisku-cli/landing/: index.html
pisku-cli/pisku-cli/server/: config.py  db.py  requirements.txt
pisku-cli/pisku-cli/server/routers/: licenses.py
pisku-cli/pisku-cli/skills/agents/: code-reviewer.md  documentation.md  perf-optimizer.md  security-auditor.md  test-generator.md
pisku-cli/pisku-cli/skills/backend/: django-orm.md  postgresql-sqlalchemy.md  python-fastapi.md
pisku-cli/pisku-cli/skills/devops/: docker-ci-cd.md  git-github.md
pisku-cli/pisku-cli/tests/: test_recommender_integration.py  test_skills_puller.py
pisku-cli/pisku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pisku-cli/server/: __init__.py  main.py  requirements.txt
pisku-cli/server/routers/: __init__.py  health.py  payments.py
pisku-cli/skills/backend/: supabase.md
pisku-cli/skills/frontend/: bootstrap5-dark.md
(+3 files in other folders)
