[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pisku"
version = "0.1.0"
description = "Stop wasting tokens on irrelevant LLM context."
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.scripts]
pisku = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
